# mediapipe_rotations

./: .gitignore  Cargo.toml  README.md  build.bash  mediapipe_rotations.pyi  mp_data.json  pybindtest.py  pyproject.toml  requirements.txt  rustfmt.toml  setup.py  test.py  test_mpr.py
.github/workflows/: CI.yml  python.yaml
mediapipe_rotations/: .gitignore  Cargo.toml
mediapipe_rotations/src/: face.rs  lib.rs  pose.rs
src/: .hand.rs.swp  .pose.rs.swp  face.rs  hand.rs  lib.rs  main.rs  pose.rs
tests/: modules.rs
