[package]
name = "mediapipe_rotations"
version = "0.0.1"
edition = "2021"
authors = ["cgtinker <hello@cgtinker.com>"]
license = "MIT"
repository = "https://github.com/cgtinker/MediapipeRotations"
readme = "README.md"

[lib]
name="mediapipe_rotations"
crate-type=["cdylib"]

[dependencies]
cgt_math = { git = "https://github.com/cgtinker/cgt_math", branch = "main" }
ndarray = "0.15"
numpy = "0.15"

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
