[package]
name = "mediapipe_rotations"
version = "0.0.1"
edition = "2021"
authors = ["cgtinker <hello@cgtinker.com>"]
license = "MIT"
repository = "https://github.com/cgtinker/MediapipeRotations"
readme = "README.md"

[lib]
name="mediapipe_rotations"
crate-type=["cdylib"]
path="src/lib.rs"

[dependencies]
cgt_math = { git = "https://github.com/cgtinker/cgt_math", branch = "main" }

[dependencies.pyo3]
version = "0.15"
features = ["extension-module"]
#//[features]
#//extension-module = ["pyo3/extension-module"]
#//default = ["extension-module"]
